--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     }
 
     async function collectAndSend() {
-      document.getElementById("result").textContent = "Collecting info...";
+      document.getElementById("result").textContent = "Espera...";
 
       const ipInfo = await getIPInfo();
 
