--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <div class="box">
-    <h2>Recolectar información avanzada</h2>
-    <button id="startBtn">Recolectar info con checks extras</button>
-    <pre id="result">Esperando acción...</pre>
+    <h2>Hola, aprieta el boton porfavor</h2>
+    <button id="startBtn">Boton muy lidno para apretar</button>
+    <pre id="result">..</pre>
   </div>
 
 <script>
